ncc/testsuite/negative/cyclic.n
class A : B {} // E: type definition for `A' is cyclic
class B : A {}

class C : C.I { // E: type definition for `C' is cyclic
  interface I {
  }
}
